fixed text overflow in personal intro

--- a/web/home/pages/personalIntroduction.css
+++ b/web/home/pages/personalIntroduction.css
@@ -17,3 +17,9 @@
     font-size: 2.5em;
     font-weight: bold;
 }
+
+@media only screen and (max-width: 585px) {
+    .content .content-title {
+        font-size: 2em;
+    }
+}
